style updates - fixed thumbnail cutoff issue, removed sql files

--- a/web/app/themes/monk-theme/src/styl/main.styl
+++ b/web/app/themes/monk-theme/src/styl/main.styl
@@ -2,7 +2,7 @@
 Theme Name:     Monk-theme
 Description:    Monk Magazine Custom theme.
 Author:         Adam Haley
-Version:        0.2.5
+Version:        0.2.6
 */
 body
 	display grid
@@ -174,6 +174,7 @@ a.more-link
 	grid-row span 5
 
 .container
+	width 90%
 	display grid
 	grid-template-columns repeat( 8, 1fr )
 	gap 1em
